<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1422</width>
    <height>851</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Smart Parking System</string>
  </property>
  <property name="windowIcon">
   <iconset resource="form_src.qrc">
    <normaloff>:/icon/logo.png</normaloff>:/icon/logo.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QMdiArea" name="mdiArea">
    <property name="geometry">
     <rect>
      <x>-10</x>
      <y>-50</y>
      <width>1431</width>
      <height>801</height>
     </rect>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1422</width>
     <height>20</height>
    </rect>
   </property>
   <widget class="QMenu" name="menu_File">
    <property name="title">
     <string>&amp;File</string>
    </property>
    <addaction name="action_Seting"/>
    <addaction name="action_Monitor"/>
    <addaction name="separator"/>
    <addaction name="action_Keluar"/>
   </widget>
   <widget class="QMenu" name="menu_Help">
    <property name="title">
     <string>&amp;Help</string>
    </property>
    <addaction name="action_About"/>
    <addaction name="separator"/>
    <addaction name="action_Penggunaan"/>
   </widget>
   <addaction name="menu_File"/>
   <addaction name="menu_Help"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QDockWidget" name="dockWidget">
   <property name="minimumSize">
    <size>
     <width>58</width>
     <height>90</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>524287</width>
     <height>90</height>
    </size>
   </property>
   <attribute name="dockWidgetArea">
    <number>4</number>
   </attribute>
   <widget class="QWidget" name="dockWidgetContents">
    <widget class="QPushButton" name="pbSetting">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>70</width>
       <height>70</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>9</pointsize>
      </font>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="icon">
      <iconset>
       <normalon>:/icon/settings.jpg</normalon>
      </iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>64</width>
       <height>64</height>
      </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pbMon">
     <property name="geometry">
      <rect>
       <x>70</x>
       <y>0</y>
       <width>70</width>
       <height>70</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="icon">
      <iconset>
       <normalon>:/icon/mon.jpg</normalon>
      </iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>64</width>
       <height>64</height>
      </size>
     </property>
    </widget>
    <widget class="QPushButton" name="pbHelp">
     <property name="geometry">
      <rect>
       <x>160</x>
       <y>0</y>
       <width>70</width>
       <height>70</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="icon">
      <iconset>
       <normalon>:/icon/help.jpg</normalon>
      </iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>64</width>
       <height>64</height>
      </size>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdJam">
     <property name="geometry">
      <rect>
       <x>260</x>
       <y>2</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="digitCount">
      <number>2</number>
     </property>
     <property name="intValue" stdset="0">
      <number>23</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdMenit">
     <property name="geometry">
      <rect>
       <x>340</x>
       <y>0</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="digitCount">
      <number>2</number>
     </property>
     <property name="intValue" stdset="0">
      <number>23</number>
     </property>
    </widget>
    <widget class="QLCDNumber" name="lcdDetik">
     <property name="geometry">
      <rect>
       <x>420</x>
       <y>0</y>
       <width>71</width>
       <height>61</height>
      </rect>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
     </property>
     <property name="digitCount">
      <number>2</number>
     </property>
     <property name="intValue" stdset="0">
      <number>23</number>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>325</x>
       <y>10</y>
       <width>21</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>48</pointsize>
      </font>
     </property>
     <property name="text">
      <string>:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
       <x>405</x>
       <y>10</y>
       <width>21</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>48</pointsize>
      </font>
     </property>
     <property name="text">
      <string>:</string>
     </property>
    </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
       <x>142</x>
       <y>0</y>
       <width>16</width>
       <height>71</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
       <x>240</x>
       <y>0</y>
       <width>16</width>
       <height>71</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
    <widget class="QLabel" name="tanggal">
     <property name="geometry">
      <rect>
       <x>510</x>
       <y>-5</y>
       <width>371</width>
       <height>71</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>48</pointsize>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="text">
      <string>01/01/2019</string>
     </property>
    </widget>
    <widget class="QLabel" name="lokasi">
     <property name="geometry">
      <rect>
       <x>920</x>
       <y>-5</y>
       <width>491</width>
       <height>71</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>48</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Metro Mall</string>
     </property>
    </widget>
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
       <x>890</x>
       <y>0</y>
       <width>16</width>
       <height>71</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
       <x>490</x>
       <y>0</y>
       <width>16</width>
       <height>71</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </widget>
  </widget>
  <action name="action_About">
   <property name="text">
    <string>&amp;About (F12)</string>
   </property>
  </action>
  <action name="action_Penggunaan">
   <property name="text">
    <string>&amp;Penggunaan (F1)</string>
   </property>
  </action>
  <action name="action_Seting">
   <property name="text">
    <string>&amp;Seting (F2)</string>
   </property>
  </action>
  <action name="action_Monitor">
   <property name="text">
    <string>&amp;Monitor (F3)</string>
   </property>
  </action>
  <action name="action_Keluar">
   <property name="text">
    <string>&amp;Keluar</string>
   </property>
  </action>
 </widget>
 <resources>
  <include location="form_src.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>action_Keluar</sender>
   <signal>triggered()</signal>
   <receiver>MainWindow</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>710</x>
     <y>425</y>
    </hint>
    <hint type="destinationlabel">
     <x>710</x>
     <y>425</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
